fixing letter spacing

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -12,7 +12,7 @@ body {
     padding-top: 150px;
     padding-bottom: 50px;
     color: #4d4d4d;
-    letter-spacing: 5px;
+    letter-spacing: 1px;
     background-color: #e9e9e9;
 
 }
